Update RPM workflow to use new RPM upload to bintray action
Also switched deb workflow to upload to my personal bintray, just
so that I can double check that the upload actually works before
trying to do a new release.

--- a/.github/workflows/pkg-build.yaml
+++ b/.github/workflows/pkg-build.yaml
@@ -39,7 +39,7 @@ jobs:
         uses: wanduow/action-bintray-upload-debian-packages@v1
         with:
           path: packages/
-          repo: wand/libtrace
+          repo: salcock/libtrace
           license: LGPL-3.0
           username: salcock
           api_key: ${{ secrets.BINTRAY_API_KEY }}
