--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -35,6 +35,12 @@ jobs:
           mkdir -p packages/${DIRNAME}
           cp ~/rpmbuild/RPMS/x86_64/*.rpm packages/${DIRNAME}/
       - name: Publish packages to bintray
-        run: echo "TODO"
+        uses: salcock/action-bintray-upload-rpm-packages@v1
+        with:
+          path: packages/
+          repo: salcock/libtrace
+          license: LGPL-3.0
+          username: salcock
+          api_key: ${{ secrets.BINTRAY_API_KEY }}
 
 
