--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: salcock/action-bintray-upload-rpm-packages@v1
         with:
           path: packages/
-          repo: salcock/libtrace
+          repo: salcock/libtrace-rpm
           license: LGPL-3.0
           username: salcock
           api_key: ${{ secrets.BINTRAY_API_KEY }}
