Install BPF program into datarootdir, When launching a libtrace program using XDP try to detect it, if found use it. Allow a user to also supply the program name when using a custom BPF program

--- a/configure.in
+++ b/configure.in
@@ -41,6 +41,7 @@ AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
 	examples/stats/Makefile examples/tutorial/Makefile examples/parallel/Makefile
 	docs/libtrace.doxygen 
 	lib/libtrace.h
+    lib/format_linux_xdp.h
 	])
 
 
