--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -67,6 +67,8 @@ endif
 
 if HAVE_LIBBPF
 XDP_SOURCES=format_linux_xdp.c format_linux_xdp.h
+xdpdir = $(datarootdir)/libtrace
+xdp_DATA = format_linux_xdp_kern
 else
 XDP_SOURCES=
 endif
