Revert last change, need to find a beter solution. Do not exit if the libtrace_map cannot be found within a BPF program, its most likely a custom program is being used

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -67,6 +67,7 @@ endif
 
 if HAVE_LIBBPF
 XDP_SOURCES=format_linux_xdp.c format_linux_xdp.h
+# install libtrace bpf kern
 xdpdir = $(datarootdir)/libtrace
 xdp_DATA = format_linux_xdp_kern
 else
