--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,7 @@ AC_CONFIG_SRCDIR(lib/trace.c)
 AM_INIT_AUTOMAKE([subdir-objects])
 
 # Make sure we use the relatively silent automake output
-m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
+#m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
 # Define our libtrace version number externally so we can use it in the source
 # as well, if needed.
@@ -232,6 +232,27 @@ AC_ARG_WITH(xdp,AS_HELP_STRING(--with-xdp,include XDP capture support),
 		AC_MSG_ERROR(libbpf library and header files not found but are required for XDP support)
         fi
 ],[])
+
+# do we want to build bpf files
+# source from Suricata
+AC_ARG_ENABLE(ebpf-build,
+    AS_HELP_STRING([--enable-ebpf-build], [Enable compilation of ebpf files]),[enable_ebpf_build=$enableval],[enable_ebpf_build=no])
+AM_CONDITIONAL([BUILD_EBPF], [test "x$enable_ebpf_build" = "xyes"])
+
+AS_IF([test "x$enable_ebpf_build" = "xyes"], [
+    AC_CHECK_PROG(CLANG, clang, "yes", "no")
+    if test "$CLANG" = "no"; then
+        AC_MSG_ERROR([unable to find clang which is needed to build ebpf files])
+    fi
+    AC_SUBST(CLANG)
+   
+    AC_CHECK_PROG(LLC, llc, "yes", "no")
+    if test "$LLC" = "no"; then
+        AC_MSG_ERROR([unable to find any of $llc_candidates needed to build ebpf files])
+    fi
+    AC_SUBST(LLC)
+])
+    
 
 # Check for libpcap
 AC_CHECK_LIB(pcap,pcap_next_ex,pcapfound=1,pcapfound=0)
@@ -795,6 +816,12 @@ if test x"$libtrace_xdp" = xtrue; then
 	AC_MSG_NOTICE([Compiled with XDP capture support: Yes])
 else
 	AC_MSG_NOTICE([Compiled with XDP capture support: No])
+fi
+
+if test x"$enable_ebpf_build" =  xyes; then
+    AC_MSG_NOTICE([XDP Libtrace BPF program will be compiled: Yes])
+else
+    AC_MSG_NOTICE([XDP Libtrace BPF program will be compiled: No])
 fi
 
 if test x"$libtrace_dpdk" = xtrue; then
