Fix incorrect BPF program in Makefile, Fix clang and llc checks needed to build BPF program, Add binary version of BPF program for users who do not have the requirements to build it

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -66,17 +66,14 @@ ETSISOURCES=
 endif
 
 if HAVE_LIBBPF
-XDP_SOURCES=format_linux_xdp.c format_linux_xdp.h
-# install libtrace bpf kern
-xdpdir = $(datarootdir)/libtrace
-xdp_DATA = format_linux_xdp_kern
+XDP_SOURCES=format_linux_xdp.c
 
 # are we building the BPF program
 # sourced from Suricata makefile
 if BUILD_EBPF
 BPF_CFLAGS =
 BPF_TARGETS = format_linux_xdp_kern.bpf
-#all: $(BPF_TARGETS)
+all: $(BPF_TARGETS)
 $(BPF_TARGETS): %.bpf: %.c
 	${CLANG} -Wall $(BPF_CFLAGS) -O2 \
 		-I/usr/include \
@@ -85,6 +82,10 @@ $(BPF_TARGETS): %.bpf: %.c
 	${LLC} -march=bpf -filetype=obj ${@:.bpf=.ll} -o $@
 	${RM} ${@:.bpf=.ll}
 endif
+
+# install libtrace bpf kern
+xdpdir = $(datarootdir)/libtrace
+xdp_DATA = format_linux_xdp_kern.bpf
 
 else
 XDP_SOURCES=
