--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,7 @@ AC_CONFIG_SRCDIR(lib/trace.c)
 AM_INIT_AUTOMAKE([subdir-objects])
 
 # Make sure we use the relatively silent automake output
-#m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
 # Define our libtrace version number externally so we can use it in the source
 # as well, if needed.
@@ -240,13 +240,18 @@ AC_ARG_ENABLE(ebpf-build,
 AM_CONDITIONAL([BUILD_EBPF], [test "x$enable_ebpf_build" = "xyes"])
 
 AS_IF([test "x$enable_ebpf_build" = "xyes"], [
-    AC_CHECK_PROG(CLANG, clang, "yes", "no")
-    if test "$CLANG" = "no"; then
+    AC_CHECK_PROG(CLANG, [clang], [clang], [no])
+    if test "$CLANG" == "no"; then
         AC_MSG_ERROR([unable to find clang which is needed to build ebpf files])
     fi
     AC_SUBST(CLANG)
    
-    AC_CHECK_PROG(LLC, llc, "yes", "no")
+    llc_candidates=$($CLANG --version | \
+        awk '/^clang version/ {
+        split($3, v, ".");
+        printf("llc-%s.%s llc-%s llc", v[[1]], v[[2]], v[[1]])
+    }')
+    AC_CHECK_PROGS([LLC], [$llc_candidates], "no")
     if test "$LLC" = "no"; then
         AC_MSG_ERROR([unable to find any of $llc_candidates needed to build ebpf files])
     fi
