--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -34,11 +34,18 @@ jobs:
           export DIRNAME=`echo ${{ matrix.target }} | tr ':' '_'`
           mkdir -p packages/${DIRNAME}
           cp ~/rpmbuild/RPMS/x86_64/*.rpm packages/${DIRNAME}/
+      - name: Publish packages to cloudsmith
+        uses: wanduow/action-cloudsmith-upload-packages@v1
+        with:
+          path: packages/
+          repo: ${{ secrets.CLOUDSMITH_OWNER }}/libtrace
+          username: salcock
+          api_key: ${{ secrets.CLOUDSMITH_API_KEY }}
       - name: Publish packages to bintray
         uses: wanduow/action-bintray-upload-rpm-packages@v1
         with:
           path: packages/
-          repo: wand/libtrace-rpm
+          repo: ${{ secrets.BINTRAY_OWNER }}/libtrace-rpm
           license: LGPL-3.0
           username: salcock
           api_key: ${{ secrets.BINTRAY_API_KEY }}
