--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1472,6 +1472,8 @@ typedef enum {
 
 	/** If enabled all meta packet will be discarded */
 	TRACE_OPTION_DISCARD_META,
+
+    TRACE_OPTION_XDP_HARDWARE_OFFLOAD,
 } trace_option_t;
 
 /** Sets an input config option
