Do not set the hasher in the XDP eBPF program when using a custom hasher

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -71,7 +71,7 @@ XDP_SOURCES=format_linux_xdp.c format_linux_xdp.h
 
 # are we building the XDP eBPF kernel program?
 if BUILD_EBPF
-format_linux_xdp_kern.bpf: format_linux_xdp_kern.c jhash.h
+format_linux_xdp_kern.bpf: format_linux_xdp_kern.c format_linux_xdp.h jhash.h
 	${CLANG} -Wall @CFLAGS@ -O2 \
 		-I/usr/include \
 		-D__KERNEL__ -D__ASM_SYSREG_H \
