--- a/.github/workflows/pkg-build.yaml
+++ b/.github/workflows/pkg-build.yaml
@@ -36,6 +36,13 @@ jobs:
           export DIRNAME=`echo ${{ matrix.target }} | tr ':' '_'`
           mkdir -p packages/${DIRNAME}
           cp ../*.deb packages/${DIRNAME}/
+      - name: Publish packages to cloudsmith
+        uses: wanduow/action-cloudsmith-upload-packages@v1
+        with:
+          path: packages/
+          repo: ${{ secrets.CLOUDSMITH_OWNER }}/libtrace
+          username: salcock
+          api_key: ${{ secrets.CLOUDSMITH_API_KEY }}
       - name: Publish packages to bintray
         uses: wanduow/action-bintray-upload-debian-packages@v1
         with:
