--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -35,6 +35,13 @@ jobs:
           export DIRNAME=`echo ${{ matrix.target }} | tr ':' '_'`
           mkdir -p packages/${DIRNAME}
           cp ~/rpmbuild/RPMS/x86_64/*.rpm packages/${DIRNAME}/
+      - name: Publish packages to cloudsmith
+        uses: wanduow/action-cloudsmith-upload-packages@v1
+        with:
+          path: packages/
+          repo: ${{ secrets.CLOUDSMITH_OWNER }}/libtrace
+          username: salcock
+          api_key: ${{ secrets.CLOUDSMITH_API_KEY }}
       - name: Publish packages to bintray
         uses: wanduow/action-bintray-upload-rpm-packages@v1
         with:
