Integrate new tracediff into libtrace
 * replaced old tracediff with "new" tracediff2 code
 * fixed bug where too many packets were being dumped when a
   match occurred further into the window
 * add documentation of -w option to man page

--- a/tools/tracediff/Makefile.am
+++ b/tools/tracediff/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = tracediff tracediff2
+bin_PROGRAMS = tracediff
 
 man_MANS = tracediff.1
 EXTRA_DIST = $(man_MANS)
@@ -8,5 +8,3 @@ include ../Makefile.tools
 tracediff_SOURCES = tracediff.c
 tracediff_LDADD = -lpacketdump
 
-tracediff2_SOURCES = tracediff2.c
-tracediff2_LDADD = -lpacketdump
