--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -64,6 +64,10 @@
 #include <sys/time.h>
 #endif
 
+#if ENABLE_DTRACE
+#include <sys/sdt.h>
+#endif
+
 /* Deal with missing byte order macros */
 #include <sys/param.h>
 
