Fix bug where libpacketdump would truncate Linux SLL packets
The length of the SLL header was being deducted twice from
the "remaining" packet, so libpacketdump would not display the
last 16 bytes of any given SLL packet.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1281,7 +1281,7 @@ typedef struct libtrace_sll_header_t {
         uint16_t halen;                 /**< Link-layer address length */
         unsigned char addr[8];          /**< Link-layer address */
         uint16_t protocol;              /**< Protocol */
-} libtrace_sll_header_t;
+} PACKED libtrace_sll_header_t;
 
 
 /* SLL packet types */
