--- a/test/Makefile
+++ b/test/Makefile
@@ -14,7 +14,8 @@ BINS_DATASTRUCT = test-datastruct-vector test-datastruct-deque \
 	test-datastruct-ringbuffer
 BINS_PARALLEL = test-format-parallel test-format-parallel-hasher \
 	test-format-parallel-singlethreaded test-format-parallel-stressthreads \
-	test-format-parallel-singlethreaded-hasher test-format-parallel-reporter test-tracetime-parallel
+	test-format-parallel-singlethreaded-hasher test-format-parallel-reporter \
+	test-tracetime-parallel test-nic
 
 BINS = test-pcap-bpf test-event test-time test-dir test-wireless test-errors \
 	test-plen test-autodetect test-ports test-fragment test-live \
