Standardise passing options via the URI
Addresses issue #145

Allow options to prepend the format URI for a input trace:
<options comma-separated>:format:uri

When a trace is created, any options at the start of the URI
are parsed until a colon is reached.
 - To provide values which contain special characters, like a comma
   put the value in square brackets.
   e.g. coremap=[0,1],perpkt_threads=2:int:eth0
 - If an unknown option is encountered, it is instead parsed as a URI

Existing valid URIs:
 - int:eth0
 - erf:/path/file.erf
 - /path/file.erf
 - /path/size=50/file.erf

URIs with configuration options:
 - coremap=[1,2]:int:eth0
 - coremap=[1,2]:erf:/path/file.erf
 - coremap=[1,2]:/path/file.erf
 - :/path/size=50/file.erf   <-- Colon at start; explicit empty options

Finishes off coremap documentation and options
 - Add docs
 - Add trace_set_coremap

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1340,9 +1340,9 @@ DLLEXPORT void trace_interrupt(void);
 
 /** Takes a uri and splits it into a format and uridata component. 
  * @param uri		The uri to be parsed
- * @param [out] format	A pointer that will be updated to point to an allocated 
+ * @param [out] format	A pointer that will be updated to point to an allocated
  * 			string holding the format component of the URI
- * @return NULL if an error occurred, otherwise return a pointer to the uridata 
+ * @return NULL if an error occurred, otherwise return a pointer to the uridata
  * component
  *
  * @note The format component is strdup'd by this function, so be sure to free
@@ -1350,15 +1350,7 @@ DLLEXPORT void trace_interrupt(void);
  * to an allocated string into this function as the 'format' parameter, as
  * that memory will be leaked and replaced with the strdup'd format.
  */
-DLLEXPORT const char *trace_parse_uri(const char *uri, char **format, int *coremap);
-
-/** Takes a uri and tries to extract the coremap from it.
- * @param cores	The coremap array to be populated with found cores.
- * @param uri	The uri to be parsed.
- *
- * @returns	Pointer into the URI after the coremap has been consumed.
- */
-DLLEXPORT const char *trace_parse_coremap_from_uri(int *cores, const char *uri);
+DLLEXPORT const char *trace_parse_uri(const char *uri, char **format);
 
 /** Create an input trace from a URI
  * 
