Correctly memalign linux format thread data
The linux per-thread data structure is written to on
receiving a packet. So the structure is cache line aligned
for best performance (false sharing). However, these were
allocated with malloc(), so the memory was not always cache aligned.

* Adds libtrace_list_init_aligned for this purpose
* Uses posix_memalign() which should exist for the Linux formats
  - If not, we add a version which always fails and prints a message
  - If this gets used elsewhere we might need to add alternatives
* Remove alignment from pfring as it does not write to the struct
  and is therefore unnecessary.

--- a/configure.in
+++ b/configure.in
@@ -134,7 +134,7 @@ AC_PROG_LIBTOOL
 AC_PROG_GCC_TRADITIONAL
 
 # Fail if any of these functions are missing
-AC_CHECK_DECLS([strdup, strlcpy, strcasecmp, strncasecmp, snprintf, vsnprintf, strndup])
+AC_CHECK_DECLS([strdup, strlcpy, strcasecmp, strncasecmp, snprintf, vsnprintf, strndup, posix_memalign])
 AC_CHECK_DECLS([socket, recvmmsg], [], [], [[#define _GNU_SOURCE 1
 #include <sys/socket.h>]])
 AC_CHECK_SIZEOF([long int])
