--- a/configure.in
+++ b/configure.in
@@ -231,14 +231,18 @@ systemtap=false
 # check if the system has systemtap header
 AC_ARG_ENABLE(dtrace, AS_HELP_STRING(--enable-dtrace, Include USDT tracepoints),
 [
-	AC_CHECK_HEADER(sys/sdt.h, [systemtap=true], [systemtap=false])
-	if test "$systemtap" = false; then
-		AC_MSG_ERROR([systemtap-sdt-dev is required to include USDT tracepoints])
-	fi
-	AC_DEFINE(ENABLE_DTRACE, 1, [Set to 1 if libtrace is to be compiled with USDT tracepoints])
+    if test "x$enableval" = xyes ; then
+        AC_CHECK_HEADER(sys/sdt.h, [systemtap=true], [systemtap=false])
+        if test "$systemtap" = false; then
+            AC_MSG_ERROR([systemtap-sdt-dev is required to include USDT tracepoints])
+        fi
+        AC_DEFINE(ENABLE_DTRACE, 1, [Set to 1 if libtrace is to be compiled with USDT tracepoints])
+    else
+        AC_DEFINE(ENABLE_DTRACE, 0, [Set to 1 if libtrace is to be compiled with USDT tracepoints])
+    fi
 ],
 [
-	AC_DEFINE(ENABLE_DTRACE, 0, [Set to 1 if libtrace is to be compiled with USDT tracepoints])
+    AC_DEFINE(ENABLE_DTRACE, 0, [Set to 1 if libtrace is to be compiled with USDT tracepoints])
 ])
 
 
@@ -297,11 +301,13 @@ fi
 # was ebpf build explicitly specified and failed
 AC_ARG_ENABLE(ebpf-build, AS_HELP_STRING(--enable-ebpf-build, Enable compilation of XDP eBPF kernel),
 [
-    if test x"$want_xdp" != xyes -a x"$build_ebpf" = xfalse; then
-        AC_MSG_ERROR([XDP required for ebpf build, set --with-xdp])
-    fi
-    if test x"$build_ebpf" = xfalse; then
-        AC_MSG_ERROR([clang, llvm and libbpf are required to build the XDP eBPF kernel])
+    if test "x$enableval" = xyes ; then
+        if test x"$want_xdp" != xyes -a x"$build_ebpf" = xfalse; then
+            AC_MSG_ERROR([XDP required for ebpf build, set --with-xdp])
+        fi
+        if test x"$build_ebpf" = xfalse; then
+            AC_MSG_ERROR([clang, llvm and libbpf are required to build the XDP eBPF kernel])
+        fi
     fi
 ],[])
 
@@ -319,7 +325,7 @@ AC_CHECK_DECLS([BIOCSETIF],,,[
 
 AC_ARG_ENABLE(memory-debugging,
                 AS_HELP_STRING(--enable-memory-debugging, prints internal memory statistics),[
-                if test "$HAVE_TLS" = 1
+                if test "$HAVE_TLS" = 1 -a "x$enableval" = xyes
                 then
                     AC_DEFINE([ENABLE_MEM_STATS], 1, [print debug memory statistics])
                 fi
