--- a/configure.in
+++ b/configure.in
@@ -229,25 +229,23 @@ AC_CHECK_LIB(tasn1, asn1_array2tree, asn1found=1, asn1found=0)
 
 # pgo optimisations
 pgo_generate=false
-AC_ARG_WITH(pgo-generate, AS_HELP_STRING(--with-pgo-generate=[DIR], Generate performance guided optimization files in DIR),
+AC_ARG_ENABLE(pgo-generate, AS_HELP_STRING(--enable-pgo-generate, Generate performance guided optimization files),
 [
-	if test x"$withval" != xno ; then
-		pgo_generate_path=$withval
+	if test x"$enableval" = xyes ; then
 		pgo_generate=true
 		AC_CHECK_LIB(gcov, __gcov_init,,AC_MSG_ERROR([gcov is required for pgo optimizations]))
-		CFLAGS+=" -fprofile-generate=$withval -fprofile-update=atomic -lgcov"
-		CXXFLAGS+=" -fprofile-generate=$withval -fprofile-update=atomic -lgcov"
+		CFLAGS+=" -fprofile-generate -fprofile-update=atomic -lgcov"
+		CXXFLAGS+=" -fprofile-generate -fprofile-update=atomic -lgcov"
 	fi
 ],[])
 pgo_build=false
-AC_ARG_WITH(pgo-build, AS_HELP_STRING(--with-pgo-build=[DIR], Build using performance guided optimization files in DIR),
+AC_ARG_ENABLE(pgo-build, AS_HELP_STRING(--enable-pgo-build, Build using performance guided optimization files),
 [
-	if test x"$withval" != xno ; then
-		pgo_build_path=$withval
+	if test x"$enableval" = xyes ; then
 		pgo_build=true
 		AC_CHECK_LIB(gcov, __gcov_init,,AC_MSG_ERROR([gcov is required for pgo optimizations]))
-		CFLAGS+=" -fprofile-correction -fprofile-use=$withval -lgcov"
-		CXXFLAGS+=" -fprofile-correction -fprofile-use=$withval -lgcov"
+		CFLAGS+=" -fprofile-correction -fprofile-use -lgcov"
+		CXXFLAGS+=" -fprofile-correction -fprofile-use -lgcov"
 	fi
 ],[])
 
@@ -936,10 +934,10 @@ fi
 
 # Performance guided optimization
 if test x"$pgo_generate" = xtrue; then
-	AC_MSG_NOTICE([Generate performance optimization files in $pgo_generate_path])
+	AC_MSG_NOTICE([Generate performance optimization files: Yes])
 fi
 if test x"$pgo_build" = xtrue; then
-	AC_MSG_NOTICE([Compile with performance guided optimization files in $pgo_build_path])
+	AC_MSG_NOTICE([Compile with performance guided optimization files: Yes])
 fi
 
 # Tracepoints
